add link to barberry.io

--- a/templates/default.html
+++ b/templates/default.html
@@ -36,7 +36,8 @@
         <a href="/posts.html" title="Posts"><span class="fa-regular fa-file-lines fa-xs"></span>Posts</a>
         <a href="/projects.html" title="Projects"><span class="fa-solid fa-suitcase fa-xs"></span>Projects</a>
         <!-- <a href="/atom.xml" title="RSS"><span class="fa-solid fa-rss fa-xs"></span>RSS</a> -->
-        <a href="https://d12frosted.io" title="GitHub"><span class="fa-brands fa-github fa-xs"></span>GitHub</a>
+        <a href="https://github.com/d12frosted" title="GitHub"><span class="fa-brands fa-github fa-xs"></span>GitHub</a>
+        <a href="https://barberry.io" title="Barberry Garden"><span class="fa-solid fa-wine-glass fa-xs"></span>Wine</a>
       </nav>
     </header>
     
