--- a/templates/default.html
+++ b/templates/default.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="article" />
     <title>$siteTitle$ - $title$</title>
     <link rel="stylesheet" href="/css/default.css" />
+    <link rel="stylesheet" href="/css/fonts.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -33,11 +34,23 @@
         <a href="/">$siteTitle$</a>
       </div>
       <nav>
-        <a href="/posts.html" title="Posts"><span class="fa-regular fa-file-lines fa-xs"></span>Posts</a>
-        <a href="/projects.html" title="Projects"><span class="fa-solid fa-suitcase fa-xs"></span>Projects</a>
+        <a href="/posts.html" title="Posts">
+          <span class="fa-regular fa-file-lines fa-xs"></span>
+          Posts
+        </a>
+        <a href="/projects.html" title="Projects">
+          <span class="fa-solid fa-suitcase fa-xs"></span>
+          Projects
+        </a>
         <!-- <a href="/atom.xml" title="RSS"><span class="fa-solid fa-rss fa-xs"></span>RSS</a> -->
-        <a href="https://github.com/d12frosted" title="GitHub"><span class="fa-brands fa-github fa-xs"></span>GitHub</a>
-        <a href="https://barberry.io" title="Barberry Garden"><span class="fa-solid fa-wine-glass fa-xs"></span>Wine</a>
+        <a href="https://github.com/d12frosted" title="GitHub">
+          <span class="fa-brands fa-github fa-xs"></span>
+          GitHub
+        </a>
+        <a href="https://barberry.io" title="Barberry Garden">
+          <span class="fa-solid fa-wine-glass fa-xs"></span>
+          Wine
+        </a>
       </nav>
     </header>
     
