add extra space between github icon and title of the project

--- a/templates/project.html
+++ b/templates/project.html
@@ -2,7 +2,8 @@
   <div class="project-header">
     <div class="project-name h3">
       <a href="https://github.com/d12frosted/$title$" title="GitHub">
-        <i class="fa-brands fa-github"/>$title$
+        <i class="fa-brands fa-github"/>
+        $title$
       </a>
     </div>
     <p>$stargazers_count$ <i class="fa fa-star"></i></p>
