update placeholder image for post card

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -19,6 +19,7 @@
   --color-mp-blue: #5F87AF;
   --color-xp-orange: #E9AE4E;
   --color-critical-red: #D66853;
+  --color-magic-purple: #C5BBDB;
 }
 
 @utility prose {
