fix: related posts list using unicode escape chars literally
Tailwind's arbitrary value syntax doesn't handle CSS unicode escapes
properly, causing \2013\20 to render as literal text instead of an
en-dash. Move list styling to plain CSS with the actual en-dash char.

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -8,3 +8,10 @@
         display: block;
     }
 }
+
+/* Related posts list styling - use en-dash as bullet */
+.related-posts-list > ul {
+    list-style-type: "– ";
+    padding-left: 1.25rem;
+    margin-top: 0;
+}
